feat/ instructor model and endpoints
