# src/config/swagger/instructor.yaml
@@ -13,7 +13,10 @@ components:
                     type: string
                 instructor_faculty:
                     type: string
-
+                    enum:
+                        - EAS
+                        - Business
+                        - CS
 
 
 /instructors/{instructor_username}:
@@ -33,14 +36,13 @@ components:
             content:
                 application/json:
                     schema:
-                        type: array
-                        items:
+                        instructor:
                             $ref: '#components/schemas/instructor'
   patch:
     tags:
         - Instructors
-    summary: this endpoint is used to create new instructors
-    description: this endpoint is used to create new instructors
+    summary: this endpoint is used to update instructors
+    description: this endpoint is used to update instructors
     security:
         - BearerAuth: []
     parameters:
@@ -75,7 +77,13 @@ components:
     responses:
         200:
             description: OK, instructor deleted successfully
-
+            content:
+                application/json:
+                    schema:
+                        type: object
+                        properties:
+                            msg:
+                                type: string
 
 
 
@@ -122,3 +130,10 @@ components:
     responses:
         200:
             description: OK, instructor created successfully
+            content:
+                application/json:
+                    schema:
+                        type: object
+                        properties:
+                            msg:
+                                type: string
